--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,20 @@
     <style name="Base.Theme.AlbumApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorOnPrimary">@color/darkOnPrimary</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/darkOnSecondary</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/darkOnPrimary</item>
+        <!-- Customize your theme here. -->
+        <item name="colorOnBackground">@color/darkOnBackground</item>
+        <item name="colorOnSurface">@color/darkOnSurface</item>
+        <item name="colorControlNormal">?attr/colorOnBackground</item>
+        <item name="android:textColorPrimary">@color/darkTextColorPrimary</item>
     </style>
 </resources>
