fix bug load image in recycleView

--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -7,11 +7,14 @@
     <include
         android:id="@+id/toolbar_photo"
         layout="@layout/layout_toolbar"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPhoto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         />
+
 </LinearLayout>
