add on click item album

--- a/app/src/main/res/layout/activity_create_album.xml
+++ b/app/src/main/res/layout/activity_create_album.xml
@@ -48,7 +48,7 @@
     <EditText
         android:id="@+id/edtTitleAlbum"
         android:layout_gravity="center"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="@string/add_title"
