--- a/app/src/main/res/layout/activity_item_album.xml
+++ b/app/src/main/res/layout/activity_item_album.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
     </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ryc_list_album"
+        android:id="@+id/ryc_list_image"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
