Add icon tick when multi select

--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -14,5 +14,12 @@
         android:scaleType="centerCrop"
         />
 
+    <ImageView
+        android:id="@+id/iconTick"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom|end"
+        android:visibility="invisible"
+        android:src="@drawable/ic_tick"  />
 
 </com.google.android.material.card.MaterialCardView>
