create dialog when long click image

--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -16,6 +16,12 @@
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         />
+<!--    <ImageView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:src="@drawable/ic_date"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginRight="10dp"/>-->
 
 
 </com.google.android.material.card.MaterialCardView>
