--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
+    android:orientation="horizontal"
+    android:layout_width="250dp"
+    android:layout_height="wrap_content"
+    android:weightSum="1.0"
+    android:background="#FFFFFF"
+    >
+    <TextView
+        android:id="@+id/menu_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu Item"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:layout_weight="1"/>
+    <ImageView
+        android:id="@+id/menu_icon"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_location"
+        android:contentDescription="@null"
+        android:layout_margin="10dp"
+        android:layout_weight="0"/>
 </LinearLayout>
