--- a/app/src/main/res/menu/menu_dialog_photo.xml
+++ b/app/src/main/res/menu/menu_dialog_photo.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+    <item
+        android:id="@+id/menu_item1"
+        android:title="Item 1"
+        android:icon="@drawable/ic_camera"/>
+    <item
+        android:id="@+id/menu_item2"
+        android:title="Item 2"
+        android:icon="@drawable/ic_camera"/>
+    <item
+        android:id="@+id/menu_item3"
+        android:title="Item 2"
+        android:icon="@drawable/ic_camera"/>
+    <item
+        android:id="@+id/menu_item4"
+        android:title="Item 2"
+        android:icon="@drawable/ic_camera"/>
+    <!-- Add more menu items as needed -->
 </menu>
