--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -6,10 +6,12 @@
     <include
         android:id="@+id/toolbar_album"
         layout="@layout/layout_toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
         android:id="@+id/recyclerViewAlbum"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp" />
+
 </LinearLayout>
