--- a/app/src/main/res/menu/menu_top_item_album.xml
+++ b/app/src/main/res/menu/menu_top_item_album.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/menu_add_image"
         android:title="@string/add_image"
         app:showAsAction="never"/>
+    <item android:id="@+id/menu_remove_album"
+        android:title="@string/remove_album"
+        app:showAsAction="never"/>
 </menu>
