--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -26,10 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemIconTint="@color/custom_color_bottom_nav"
+        app:itemIconTint="?attr/colorOnBackground"
         app:itemTextColor="@color/custom_color_bottom_nav"
         app:elevation="16dp"
         app:labelVisibilityMode="unlabeled"
         android:background="?attr/colorOnPrimary"
-        app:menu="@menu/menu_bottom_photo" />
+        app:menu="@menu/menu_bottom_photo"
+        />
 </LinearLayout>
