--- a/app/src/main/res/menu/menu_top_item_album.xml
+++ b/app/src/main/res/menu/menu_top_item_album.xml
@@ -15,4 +15,7 @@
     <item android:id="@+id/menu_remove_album"
         android:title="@string/remove_album"
         app:showAsAction="never"/>
+    <item android:id="@+id/menu_change_password"
+        android:title="@string/change_password"
+        app:showAsAction="never"/>
 </menu>
