--- a/app/src/main/res/menu/menu_top_item_album.xml
+++ b/app/src/main/res/menu/menu_top_item_album.xml
@@ -18,4 +18,7 @@
     <item android:id="@+id/menu_change_password"
         android:title="@string/change_password"
         app:showAsAction="never"/>
+    <item android:id="@+id/menu_put_back"
+        android:title="@string/put_back"
+        app:showAsAction="never"/>
 </menu>
