--- a/app/src/main/res/layout/dialog_layout_photo.xml
+++ b/app/src/main/res/layout/dialog_layout_photo.xml
@@ -23,13 +23,175 @@
                 />
         </com.google.android.material.card.MaterialCardView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
+        android:id="@+id/layoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingBottom="10dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:background="@drawable/background_recyclerview_menu">
+        <LinearLayout
+            android:id="@+id/btnShare"
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1.0"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            android:background="#FFFFFF"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_margin="10dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_ios_share"
+                android:contentDescription="@null"
+                android:layout_margin="10dp"
+                android:layout_weight="0"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#AAAAAA" />
+        <LinearLayout
+            android:id="@+id/btnFavorite"
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1.0"
+            android:background="#FFFFFF"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/favorite"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_margin="10dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_favorite"
+                android:contentDescription="@null"
+                android:layout_margin="10dp"
+                android:layout_weight="0"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#AAAAAA" />
+        <LinearLayout
+            android:id="@+id/btnAddToAlbum"
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1.0"
+            android:background="#FFFFFF"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/addAlbum"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_add_photos"
+                android:contentDescription="@null"
+                android:layout_margin="10dp"
+                android:layout_weight="0"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#AAAAAA" />
+        <LinearLayout
+            android:id="@+id/btnPrivate"
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1.0"
+            android:background="#FFFFFF"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/addprivate"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_priavte_off"
+                android:contentDescription="@null"
+                android:layout_margin="10dp"
+                android:layout_weight="0"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#AAAAAA" />
+        <LinearLayout
+            android:id="@+id/btnDelete"
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1.0"
+            android:background="#FFFFFF"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:textSize="20sp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:textColor="#FF0000"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_trash_red"
+                android:contentDescription="@null"
+                android:layout_margin="10dp"
+                android:layout_weight="0"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
