--- a/app/src/main/res/layout/dialog_layout_photo.xml
+++ b/app/src/main/res/layout/dialog_layout_photo.xml
@@ -87,6 +87,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"/>
             <ImageView
+                android:id="@+id/iconFavorite"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/ic_favorite"
