--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -46,64 +46,63 @@
 
         <LinearLayout
             android:id="@+id/linearLayoutBtnPrivate"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:onClick="onPrivateAlbumClicked">
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_priavte_off"
+                android:contentDescription="@null"
+                android:layout_margin="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/ic_priavte_off"
-                    android:contentDescription="@null"
-                    android:layout_margin="10dp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/album_private"
-                    android:textSize="20sp"
-                    android:layout_margin="10dp" />
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#FFD8D8D8"
-                android:layout_marginLeft="55dp"
-                android:layout_marginBottom="10dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/linearLayoutBtnTrash"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onTrashClicked">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/ic_trash"
-                    android:contentDescription="@null"
-                    android:layout_margin="10dp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/recently_deleted"
-                    android:textSize="20sp"
-                    android:layout_margin="10dp" />
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#FFD8D8D8"
-                android:layout_marginLeft="55dp"
-                android:layout_marginBottom="10dp"/>
+                android:text="@string/album_private"
+                android:textSize="20sp"
+                android:layout_margin="10dp" />
+
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#FFD8D8D8"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="10dp"/>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutBtnTrash"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
+            android:onClick="onTrashClicked">
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_trash"
+                android:contentDescription="@null"
+                android:layout_margin="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recently_deleted"
+                android:textSize="20sp"
+                android:layout_margin="10dp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#FFD8D8D8"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
 </ScrollView>
