add button slideshow in multilselect

--- a/app/src/main/res/layout/activity_mutilselect_photo.xml
+++ b/app/src/main/res/layout/activity_mutilselect_photo.xml
@@ -53,6 +53,7 @@
             android:layout_height="wrap_content"
             android:text="Select image"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:gravity="center"
             android:layout_weight="0.5"/>
 
