--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -26,6 +26,11 @@
         app:showAsAction="ifRoom|collapseActionView"
         android:iconTint="?attr/colorOnBackground"/>
 
+    <item android:id="@+id/menuDuplicate"
+        android:title="@string/find_duplicate"
+        android:icon="@drawable/ic_filter"
+        app:showAsAction="ifRoom|collapseActionView"
+        android:iconTint="?attr/colorOnBackground"/>
 <!--    <item android:id="@+id/menuChoose"-->
 <!--        android:title="@string/multiSelect"-->
 <!--        app:showAsAction="never"/>-->
