--- a/app/src/main/res/layout/activity_put_back_trash.xml
+++ b/app/src/main/res/layout/activity_put_back_trash.xml
@@ -25,10 +25,13 @@
             android:focusable="true"
             android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
-        <View
+        <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.9"
+            android:text="Put Back"
+            android:textSize="24dp"
+            android:textAlignment="center"
             android:layout_gravity="center"/>
 
 
